# React-FastAPI-MongoDB

aws_ec2_prod/: .gitignore  README.md  STRIPE.md  pyproject.toml
aws_ec2_prod/app/: agg_pipeline.py  api.py  api.py.orig  config.py  crud.py  database.py  main.py  redirectioner.py  schemas.py  stripe_subscription.py  utils.py
aws_ec2_prod/app/intermediate_pages/: asset-manifest.json  index.html
aws_ec2_prod/app/intermediate_pages/icons/: browserconfig.xml
aws_ec2_prod/app/intermediate_pages/static/css/: main.08765958.chunk.css  main.08765958.chunk.css.map
aws_ec2_prod/app/intermediate_pages/static/js/: 2.bed8a9dc.chunk.js  2.bed8a9dc.chunk.js.map  main.c0d9c7ae.chunk.js  main.c0d9c7ae.chunk.js.map  runtime-main.5aa5d5c8.js  runtime-main.5aa5d5c8.js.map
aws_ec2_prod/app/react/: asset-manifest.json  index.html  manifest.json
aws_ec2_prod/app/react/static/css/: 2.2df2c6be.chunk.css  2.2df2c6be.chunk.css.map  main.2a149d71.chunk.css  main.2a149d71.chunk.css.map  main.5ae2dced.chunk.css  main.5ae2dced.chunk.css.map  main.75c3d52b.chunk.css  main.75c3d52b.chunk.css.map
aws_ec2_prod/app/react/static/js/: 2.ad5ac7bb.chunk.js  2.cbb670d5.chunk.js  2.cbb670d5.chunk.js.LICENSE.txt  2.e15381c8.chunk.js  main.3a761289.chunk.js  main.3a761289.chunk.js.map  main.566a9020.chunk.js  main.566a9020.chunk.js.map  main.82c62f11.chunk.js  main.82c62f11.chunk.js.map  main.83e88d11.chunk.js  main.83e88d11.chunk.js.map  main.a1e47665.chunk.js  main.a1e47665.chunk.js.map  main.a94f4440.chunk.js  main.a94f4440.chunk.js.map  main.d611682b.chunk.js  (+1 more)
aws_ec2_prod/resources/: keys.json
(+85 files in other folders)
